corrected the alignment of video tag and hover on buttons

--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,11 @@
 * {
   margin: 0px;
-    padding: 0px;
-    border: 0;
-    outline: 0;
+  padding: 0px;
+  border: 0;
+  outline: 0;
   box-sizing: border-box;
 }
-a{
+a {
   text-decoration: none;
   outline: none;
 }
@@ -368,17 +368,13 @@ small {
     margin: 0px 0px 0px 0px;
   }
   .video {
-    margin-top: 19.5vh;
+    margin-top: 16vh;
     width: 100%;
-    height: 500px;
+    height: 700px;
     overflow: hidden;
   }
-
-  .homebutton {
-    margin-top: 2rem;
-  }
- .header{
-    padding-top: 200px;
+  .header {
+    padding-top: 0px;
     color: #fefdfc;
   }
 }
@@ -885,53 +881,90 @@ small {
   }
 }
 /* ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
-.all-text{
+.all-text {
   position: relative;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    left: 0;
-    width: 100%;
-    font-size: 24px;
-    font-weight: bold;
-    color: #8ac03b;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  left: 0;
+  width: 100%;
+  font-size: 24px;
+  font-weight: bold;
+  color: #8ac03b;
 }
-.header>h2{
+.header > h2 {
   color: #fefdfc;
   font-weight: 800;
   clear: both;
   margin: 0;
   padding: 15px 0 10px;
 }
+
+.btn-style-ten {
+  position: relative;
+  display: inline-block;
+  font-size: 16px;
+  line-height: 30px;
+  color: #fefdfc;
+  padding: 15px 41px;
+  font-weight: 700;
+  overflow: hidden;
+  cursor: pointer;
+  border-radius: 4px;
+  text-transform: capitalize;
+  background-color: #111b2b;
+}
+.purple {
+  background-color: #4f6cfa;
+  transition: all 0.3s ease 0s;
+}
 .white {
   background-color: #fefdfc;
+  transition: all 0.3s ease 0s;
+}
+.white:hover,
+.purple:hover {
+  background-color: #8ac03b;
 }
 .btn-style-thirteen {
-    position: relative;
-    display: inline-block;
+  position: relative;
+  display: inline-block;
+  font-size: 16px;
+  line-height: 30px;
+  color: #19274d;
+  padding: 13px 47px;
+  font-weight: 700;
+  overflow: hidden;
+  cursor: pointer;
+  border-radius: 5px;
+  text-transform: capitalize;
+  font-family: "Roboto", sans-serif;
+}
+.btn-style-thirteen > a {
+  color: #19274d;
+}
+
+.header > .offer {
+  padding-bottom: 12px;
+  font-size: 14px;
+  font-weight: bold;
+  color: #4f6cfa;
+  font-style: oblique;
+}
+@media only screen and (max-width: 479px) and (min-width: 320px) {
+  .all-text {
     font-size: 16px;
-    line-height: 30px;
-    color: #19274d;
-    padding: 13px 47px;
-    font-weight: 700;
-    overflow: hidden;
-    cursor: pointer;
-    border-radius: 5px;
-    text-transform: capitalize;
-    border: 2px solid #d7e5f0;
-    font-family: 'Roboto',sans-serif;
+  }
 }
-.btn-style-thirteen>a{
-  color:#19274d
-}
-@media only screen and (max-width: 479px) and (min-width: 320px){
-.all-text {
-    font-size: 16px;
-}
-}
-@media (min-width: 30px) and (max-width: 767px){
-.header>h2 {
+
+@media (min-width: 30px) and (max-width: 767px) {
+  .header > h2 {
     font-size: 30px;
     line-height: 38px;
+  }
 }
+@media only screen and (max-width: 600px) {
+  .header .btn-style-ten {
+    margin-top: 0.5rem;
+  }
 }
